исправил фильтрацию