@@ -1,23 +1,22 @@
 package faang.school.godbless.filtering_spam;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
         MessageProcessor processor = new MessageProcessor();
 
-        MessageFilter spamFilter = message -> message.toLowerCase().contains("СЃРїР°Рј");
-        MessageFilter lengthFilter = message -> (message.length() > 14);
-        MessageFilter emojiFilter = message -> message.contains("?");
+        MessageFilter spamFilter = message -> message.contains("spam");
+        MessageFilter lengthFile = message -> message.length() > 14;
+        MessageFilter emojiFilter = message -> message.contains("r");
 
-        List<MessageFilter> filters = Arrays.asList(spamFilter, lengthFilter, emojiFilter);
+        List<MessageFilter> filters = List.of(spamFilter, lengthFile, emojiFilter);
 
-        String[] messages = {"РџСЂРёРІРµС‚!", "Р­С‚Рѕ СЃРїР°Рј!", "РљР°Рє РґРµР»Р°? ?", "Р”Р»РёРЅРЅРѕРµ СЃРѕРѕР±С‰РµРЅРёРµ Р±РµР· СЃРїР°РјР° Рё СЌРјРѕРґР·Рё"};
+        String[] messages = {"Привет", "Это spam!", "Как дела? r", "Длинное сообщение без спама и эмодзи", "Привет Павел"};
 
         for (String message : messages) {
             boolean isFiltered = processor.processorMessage(message, filters);
-            System.out.println("РЎРѕРѕР±С‰РµРЅРёРµ: " + message + " | РџСЂРѕРїСѓС‰РµРЅРѕ: " + isFiltered);
+            System.out.println("Сообщение: " + message + " | Пропущенно: " + isFiltered);
         }
     }
 }
